# UNet

./: .gitignore  README.md  README_PERFORMANCE.md  data.py  main.py  model.py  optimize_gpu.py  pyproject.toml  requirements.txt  test_gpu.py
data_helpers/: Glas.py  ISIC2018.py  __init__.py  data.py  my_proj1.py  my_proj2.py  utils.py
icp/: iterative_icp.py  main.py  uav.py
losses/: cl_dice.py
models/: losses.py  lunext.py  model_utils.py  unet.py
test_helper/: skeleton.py  utils.py
trainer/: k_fold.py  k_fold_old.py  training_utils.py
